sumo/tests/duarouter/errors/unknown_vType/errors.duarouter
Error: Unknown vehicle type 'foo'
Quitting (on error).
